# didcomm-messaging-python

./: .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.github/workflows/: code-quality-check.yml  publish.yml  tests.yml
didcomm_messaging/: __init__.py  crypto.py  didcomm.py  jwe.py  messaging.py  packaging.py  quickstart.py  resolver.py  routing.py
didcomm_messaging/askar/: __init__.py
didcomm_messaging/crypto/: __init__.py  authlib.py  base.py  basic.py  jwe.py
didcomm_messaging/crypto/askar/: __init__.py
didcomm_messaging/crypto/backend/: __init__.py  askar.py  authlib.py  basic.py
didcomm_messaging/legacy/: __init__.py  askar.py  base.py  crypto.py  messaging.py  nacl.py  packaging.py
didcomm_messaging/multiformats/: __init__.py  multibase.py  multicodec.py
didcomm_messaging/resolver/: __init__.py  jwk.py  key.py  peer.py  web.py
didcomm_messaging/v1/: __init__.py  messaging.py  packaging.py  utils.py
didcomm_messaging/v1/crypto/: __init__.py  askar.py  base.py  nacl.py
examples/: authlib_file_secrets.py  conftest.py
tests/: conftest.py  test_didresolver.py  test_didweb.py  test_legacy.py  test_packaging.py  test_secrets.py
tests/askar/: test_crypto.py
tests/authlib/: test_authlib.py
tests/crypto/: test_askar.py  test_askar_x_authlib.py  test_authlib.py
tests/legacy/: conftest.py  test_crypto.py  test_nacl_x_askar.py
tests/v1/: conftest.py  test_forward.py  test_nacl_x_askar.py
