[project]
name = "didcomm-messaging"
version = "0.1.0"
description = "DIDComm Messaging implemented with swappable backends."
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
dependencies = [
    "aries-askar>=0.2.9",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
askar = [
    "aries-askar>=0.2.9",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = "--doctest-glob README.md --ruff"

[tool.ruff]
select = ["E", "F", "C", "D"]

ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
]

line-length = 90

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-ruff>=0.1.1",
    "pre-commit>=3.5.0",
    "black>=23.10.1",
    "ruff>=0.1.3",
]
