[project]
name = "didcomm-messaging"
version = "0.1.2a0"
description = "DIDComm Messaging implemented with swappable backends."
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
    {name = "Colton Wolkins", email = "colton@indicio.tech"},
    {name = "Micah Peltier", email = "micah@indicio.tech"},
]
dependencies = [
    "base58>=2.1.1",
    "pydid>=0.5.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
askar = [
    "aries-askar>=0.2.9",
]
did_peer = [
    "did-peer-2>=0.1.2",
    "did-peer-4>=0.1.2",
]
authlib = [
    "authlib>=1.2.1",
    "pycryptodomex>=3.19.0",
]
legacy = [
    "msgpack>=1.0.8",
    "PyNaCl>=1.5.0",
]
nacl = [
    "msgpack>=1.0.8",
    "PyNaCl>=1.5.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-ruff>=0.1.1",
    "pre-commit>=3.5.0",
    "ruff>=0.4.1",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
addopts = "--doctest-glob README.md --ruff --cov didcomm_messaging"

[tool.ruff]
line-length = 90
extend-exclude = ["example*.py"]

[tool.ruff.lint]
select = ["E", "F", "C", "D", "TID"]
ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
]
per-file-ignores = {"**/{tests}/*" = ["F841", "D", "E501"]}

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract"]
precision = 2
show_missing = true

[tool.coverage.run]
branch = true
